8181503: Can't compile hotspot with c++11

Fixed 5 unique c++14 compiler issues

Reviewed-by: coleenp, dholmes, kbarrett